# ml-model-serving

./: .env.example  LICENSE.txt  Makefile  README.md  setup.py
app/: init.py  main.py
docker/: Dockerfile.training
kubernetes/: prometheus.yaml  training-job.yaml
ml-model-serving/: .gitignore  README.md  pyproject.toml
ml-model-serving/app/api/: endpoints.py  init.py  middleware.py
ml-model-serving/app/api/endpoints/: health.py  models.py  monitoring.py
ml-model-serving/app/core/: init.py  security.py
ml-model-serving/app/db/: base.py  init.py
ml-model-serving/app/ml/: init.py  model_loader.py  model_manager.py  monitoring.py
ml-model-serving/app/models/: database.py  init.py  schemas.py
ml-model-serving/app/services/: init.py  prediction.py
ml-model-serving/data/: README.md
ml-model-serving/data/processed/: iris_processed.csv
ml-model-serving/docker/: Dockerfile.api  docker-compose.yaml
ml-model-serving/kubernetes/: api-deployment.yaml  api-service.yaml  grafana.yaml
ml-model-serving/models/: init.py
ml-model-serving/monitoring/: alerts.yaml  grafana-dashboard.json
ml-model-serving/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
ml-model-serving/requirements/: dev.txt  training.txt
ml-model-serving/scripts/: deploy_model.py  setup_environment.sh  train_model.py
ml-model-serving/tests/: conftest.py  test_models.py
ml-model-serving/training_pipeline/: init.py  model_evaluation.py
monitoring/: prometheus.yml
notebooks/: notebooks03_model_evaluation.ipynb
requirements/: api.txt  base.txt
tests/: test_api.py  (+1 more)
(+14 files in other folders)
