[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-model-serving"
version = "1.0.0"
description = "Machine Learning Model Serving API with MLOps"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "flake8"]
api = ["fastapi", "uvicorn", "python-multipart", "aiofiles"]
training = ["scikit-learn", "pandas", "numpy", "matplotlib"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3